--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
 
 <!-- nav start -->
-
+<h2><b>Kaamil</b></h2>
 <nav class="navbar bg-body-tertiary">
   <marquee class="bg-black text-light" behavior="" direction=""><b>THE PLATFORM WHERE YOU CAN SHOP LIKE A GREAT!!</b></marquee>
 
@@ -247,3 +247,4 @@
   </body>
 
 </html>
+
